--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -28,6 +28,16 @@
     </div>
 
     <div class="pdetails-body">
+      <label class="lbl-pname">SENIOR ID NUMBER</label><br />
+      <label class="value-pname">{{patient_record.srID}} </label>
+    </div>
+
+    <div class="pdetails-body">
+      <label class="lbl-pname">PWD ID NUMBER</label><br />
+      <label class="value-pname">{{patient_record.pwdID}} </label>
+    </div>
+
+    <div class="pdetails-body">
       <label class="lbl-pname">ADDRESS</label><br />
       <label class="value-pname">{{patient_record.address}} </label>
     </div>
@@ -40,6 +50,11 @@
     <div class="pdetails-body">
       <label class="lbl-pname">BIRTHDAY</label><br />
       <label class="value-pname">{{patient_record.bday}} </label>
+    </div>
+
+    <div class="pdetails-body">
+      <label class="lbl-pname">NATIONALITY</label><br />
+      <label class="value-pname">{{patient_record.nationality}} </label>
     </div>
 
     <div class="pdetails-body">
