--- a/website/templates/pdfreport.html
+++ b/website/templates/pdfreport.html
@@ -112,7 +112,7 @@
         <b>
           <h1 style="margin:0 100px 0;font-size:20px;color:#2d2e32;">LABAGUIS NEURO CLINIC AND NEUROCARE PHARMACY</h1>
         </b>
-        <h1 style="margin:0;color:#0a5202;">Deseases of the Brain, Spinal Cord, Nerves and Muscles</h1>
+        <h1 style="margin:0;color:#0a5202;">Diseases of the Brain, Spinal Cord, Nerves and Muscles</h1>
         <h1 style="margin:0;" width="50%">Dr. Zernan S. Labaguis</h1>
         <p style="margin:0;">NEUROLOGIST</p>
       </center>
