--- a/website/static/style.css
+++ b/website/static/style.css
@@ -244,11 +244,37 @@ header li,a,strong, button {
 
 .form-fields {
     width: 100%;
-    padding: 10px 20px;
+    padding: 20px 30px;
     margin: 0;
 }
 
 .reg-input{
+    display: block;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+    border-width: 1px;
+    padding-left: 2px;
+    padding: 4px 2px;
+    width: 100%;
+    color: black;
+   
+}
+
+#id_bp{
+    background-color: rgba(249, 255, 189, 0.3);
+    display: block;
+    border-style: solid;
+    border-color: silver;
+    border-radius: 2px;
+    border-width: 1px;
+    padding-left: 5px;
+    width: 70%;
+    color: #045164;
+}
+
+#id_remarks, #id_diagnosis,#id_objectives,#id_plans_recommendations{
+    background-color: rgba(249, 255, 189, 0.3);
     display: block;
     border-style: solid;
     border-color: silver;
@@ -257,7 +283,7 @@ header li,a,strong, button {
     padding-left: 5px;
     width: 100%;
     color: #045164;
-   
+    height: 150px;
 }
 
 .reg-label{   
@@ -270,6 +296,7 @@ header li,a,strong, button {
    
     display:inline-flex;
     width: 100%;
+    margin: 0px 0;
     
 }
 
@@ -556,7 +583,7 @@ hr{
  }
 
 input, textarea, select{
-    background-color: rgb(250, 255, 189,0.2);
+    background-color: rgba(249, 255, 189, 0.3);
     padding: auto;
     font-family: 'Arial';
     margin: 5px 0 5px 0;
