--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url "dashboard" %}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="{% url "patientlist" %}">Patients</a>
+                <a class="nav-link " href="{% url "patienttable" %}">Patients</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url "medications" %}">Medicines</a>
