--- a/website/templates/newpatient.html
+++ b/website/templates/newpatient.html
@@ -84,13 +84,14 @@
     <div class="reg-row">        
         <div class="reg-col">
             <label class="reg-label">Common Concern</label><br>
-            <textarea class="reg-input" cols="100%" name="remarks" required></textarea>
+            <textarea class="reg-input mb-3" cols="100%" name="remarks" required></textarea>
         </div>
     </div>
 
     <div class="reg-row">
         <div class="reg-col">        
-            <button class="btn-save" type="submit">Save</button>
+            <button class="btn-save" style="width:130px;" type="submit">Save</button>
+            <a href="javascript:history.go(-1)" style="width:130px;" class="btn btn-secondary" >Back</a>    
         </div>
     </div>
 </form>
