--- a/website/templates/sidemenu.html
+++ b/website/templates/sidemenu.html
@@ -2,7 +2,7 @@
     <!--Left Menus-->
     <div class="left-menu">
       <div class="active-title">Patient Records</div>
-      <a href="{% url "patientlist" %}">Patient List</a><hr>
+      <a href="{% url "patientlist" %}">Add New Patient</a><hr>
       <a href="{% url "medications" %}">Medicine List</a><hr>
      
     </div>
