--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -49,7 +49,7 @@
             <table id="consultation-table" class="patient-table table-striped ">
                 <thead class="table-success">
                     <th>Patient Number</th>
-                    <th>Remarks</th>
+                    <th>Common Concern</th>
                     <th>Diagnosis</th>
                     <th>Date/Time</th>
                 </thead>
