--- a/website/templates/patientstable.html
+++ b/website/templates/patientstable.html
@@ -6,7 +6,7 @@
         <th>Patient Name</th>
         <th>Gender</th>
         <th>Age</th>
-        <th>Date Added No.</th>
+        <th>Date Added</th>
         <th>Actions</th>
       </thead>
   
