--- a/website/templates/tables/medicalhistorytb.html
+++ b/website/templates/tables/medicalhistorytb.html
@@ -20,6 +20,18 @@
     {{pHistoryForm.bp}}
     <br>
 
+    <label class="label_1">Weight:</label>
+    {{pHistoryForm.weight}}
+    <br>
+
+    <label class="label_1">Height:</label>
+    {{pHistoryForm.height}}
+    <br>
+
+    <label class="label_1">Temperature:</label>
+    {{pHistoryForm.bodytemp}}
+    <br>
+
     <label class="label_1">Common Concern:</label>
     {{pHistoryForm.remarks}}
     <br>
