--- a/website/static/style.css
+++ b/website/static/style.css
@@ -168,6 +168,15 @@ header li,a,strong, button {
     background: linear-gradient(90deg, rgba(0,135,97,0.8) 0%, rgba(59,178,113,0.49343487394957986) 100%);
 }
 
+.title-form3{
+    color: #edf0f1 ;    
+    width: 100%;
+    padding: 2px 10px;
+    font-size: 13px;
+    background: rgb(0,135,97);
+    background: linear-gradient(90deg, rgba(0,135,97,0.5) 0%, rgba(59,178,113,0.49343487394957986) 100%);
+}
+
 
 .left-menu lu,li {
     font-size: 5px;
@@ -261,7 +270,7 @@ header li,a,strong, button {
    
 }
 
-#id_bp{
+#id_bp, #id_weight, #id_height, #id_bodytemp{
     background-color: rgba(249, 255, 189, 0.3);
     display: block;
     border-style: solid;
@@ -431,6 +440,8 @@ td {
     color: #01576d;
 }
 
+
+
 .value-pname{
     font-size: 20px;
     font-style: bold;
@@ -567,6 +578,18 @@ hr{
 .add_medicalhistorytable{
     padding: 15px;
     margin: 5px;
+    
+}
+
+.history_item{
+    margin-right: 100px;
+}
+
+.add_medicalhistorytable_flex{
+    padding: 15px;
+    margin: 5px;
+    display: inline-flex;
+    justify-content:space-between;
 }
 
 
